formater hele prosjektet